--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
+    id 'kotlin-kapt'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -23,8 +26,13 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    buildFeatures {
+        viewBinding true
+        dataBinding true
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -32,10 +40,87 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.4.2"
+    def cor_version = "1.6.0"
+    def material_version = "1.7.0-alpha01"
+    def pref_version = "1.2.0"
+    def glide_version = "4.12.0"
+    def retrofit2_version = "2.9.0"
+    def coil_version = "1.4.0"
+    def dagger_version = "2.41"
+    def archComponents = "2.4.1"
+    def gson_version = "2.8.9"
+    def okhttp3_version = "5.0.0-alpha.4"
+    def moshi_version = '1.12.0'
+    def switch_btn_version = "0.0.3@aar"
+    def ui_fragment_version = "1.4.1"
+    def ui_activity_version = "1.4.0"
+    def coroutines_adapter_version = "0.9.2"
 
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Coroutines for getting off the UI thread
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$cor_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$cor_version"
+
+    // Coil
+    implementation "io.coil-kt:coil:$coil_version"
+    implementation "io.coil-kt:coil-svg:$coil_version"
+
+    //Moshi
+    implementation "com.squareup.moshi:moshi:$moshi_version"
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit2_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
+
+    //Coroutines Adapter
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$coroutines_adapter_version"
+
+    //Parsing the JSON format
+    implementation "com.google.code.gson:gson:$gson_version"
+
+    //Switch Button
+    implementation "com.github.zcweng:switch-button:$switch_btn_version"
+
+    //OkHTTP
+    implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
+
+    // UI
+    implementation "androidx.fragment:fragment-ktx:$ui_fragment_version"
+    implementation "androidx.activity:activity-ktx:$ui_activity_version"
+
+    // glide for images
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+    implementation("com.github.bumptech.glide:recyclerview-integration:$glide_version") {
+        transitive = false
+    }
+
+    // Dagger2
+    implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+
+    //noinspection GradleDependency
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$archComponents")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$archComponents")
+    //noinspection GradleDependency
+    implementation("androidx.lifecycle:lifecycle-common-java8:$archComponents")
+    //noinspection GradleDependency
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:$archComponents")
+
+    // Support libraries
+    implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.preference:preference-ktx:$pref_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
