--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     def ui_fragment_version = "1.4.1"
     def ui_activity_version = "1.4.0"
     def coroutines_adapter_version = "0.9.2"
+    def room_version = '2.4.2'
 
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -98,6 +99,11 @@ dependencies {
     implementation("com.github.bumptech.glide:recyclerview-integration:$glide_version") {
         transitive = false
     }
+
+    //Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     // Dagger2
     implementation "com.google.dagger:dagger:$dagger_version"
