добавил fcm service

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     def shimmer_version = '0.5.0'
     def splash_version = '1.0.0'
     def balloon_version = '1.5.2'
+    def fcm_version = '23.1.0'
 
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -121,6 +122,11 @@ dependencies {
 
     //Balloon
     implementation "com.github.skydoves:balloon:$balloon_version"
+
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:30.3.2')
+    implementation "com.google.firebase:firebase-messaging-ktx:$fcm_version"
+    implementation "com.google.firebase:firebase-messaging-directboot:$fcm_version"
 
     //noinspection GradleDependency
     implementation 'androidx.core:core-ktx:1.8.0'
